[tool.poetry]
name = "aoi-optimization"
version = "0.1.0"
description = "an optimization problem around age of infomation in lorawan"
authors = ["Parham Alvani <parham.alvani@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
gurobipy = "^9.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
